--- a/FAISS.ipynb
+++ b/FAISS.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.set_option('display.max_colwidth', 100)"
+    "pd.set_option('display.max_colwidth', 100)\n"
    ]
   },
   {
