Retrieval.ipynb Added

--- a/Retrieval.ipynb
+++ b/Retrieval.ipynb
@@ -24,6 +24,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load openAI api key\n",
+    "load_dotenv()\n",
+    "# Access the environment variable\n",
+    "open_api_key = os.getenv('OPEN_API_KEY')\n",
+    "os.environ['OPENAI_API_KEY'] = open_api_key\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialise LLM with required params\n",
+    "llm = OpenAI(temperature=0.9, max_tokens=500) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaders = UnstructuredURLLoader(urls=[\n",
+    "    \"https://www.moneycontrol.com/news/business/markets/wall-street-rises-as-tesla-soars-on-ai-optimism-11351111.html\",\n",
+    "    \"https://www.moneycontrol.com/news/business/tata-motors-launches-punch-icng-price-starts-at-rs-7-1-lakh-11098751.html\"\n",
+    "])\n",
+    "data = loaders.load() \n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
