Retrieval.ipynb Added

--- a/Retrieval.ipynb
+++ b/Retrieval.ipynb
@@ -87,10 +87,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create embeddings for these chunks and save them to FAISS index"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create the embeddings of the chunks using openAIEmbeddings\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "# Pass the documents and embeddings inorder to create FAISS vector index\n",
+    "vectorindex_openai = FAISS.from_documents(docs, embeddings)"
+   ]
   }
  ],
  "metadata": {
