Retrieval.ipynb Added

--- a/Retrieval.ipynb
+++ b/Retrieval.ipynb
@@ -152,7 +152,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import faiss\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "from langchain.vectorstores import FAISS\n",
+    "\n",
+    "file_path = \"vector_index.faiss\"\n",
+    "docstore_path = \"vector_index_docstore.pkl\"\n",
+    "index_to_docstore_id_path = \"vector_index_index_to_docstore_id.pkl\"\n",
+    "\n",
+    "if not (os.path.exists(file_path) and os.path.exists(docstore_path) and os.path.exists(index_to_docstore_id_path)):\n",
+    "    # Create the embeddings of the chunks using OpenAIEmbeddings\n",
+    "    embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "    # Pass the documents and embeddings in order to create FAISS vector index\n",
+    "    # vectorindex_openai = FAISS.from_documents(docs, embeddings)\n",
+    "\n",
+    "    # Save the FAISS index to a file\n",
+    "    index = vectorindex_openai.index\n",
+    "    faiss.write_index(index, file_path)\n",
+    "\n",
+    "    # Save the docstore and index_to_docstore_id separately\n",
+    "    with open(docstore_path, \"wb\") as f:\n",
+    "        pickle.dump(vectorindex_openai.docstore, f)\n",
+    "\n",
+    "    with open(index_to_docstore_id_path, \"wb\") as f:\n",
+    "        pickle.dump(vectorindex_openai.index_to_docstore_id, f)\n",
+    "\n",
+    "    # Save the embedding function separately if it is picklable\n",
+    "    # If not, you may need to recreate it during loading\n",
+    "    embedding_function = vectorindex_openai.embedding_function\n",
+    "else:\n",
+    "    print(\"FAISS index already exists. Skipping creation.\")"
+   ]
   }
  ],
  "metadata": {
