Retrieval.ipynb Added

--- a/Retrieval.ipynb
+++ b/Retrieval.ipynb
@@ -187,6 +187,46 @@
     "else:\n",
     "    print(\"FAISS index already exists. Skipping creation.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import faiss\n",
+    "import pickle\n",
+    "from langchain.embeddings import OpenAIEmbeddings\n",
+    "from langchain.vectorstores import FAISS\n",
+    "\n",
+    "file_path = \"vector_index.faiss\"\n",
+    "docstore_path = \"vector_index_docstore.pkl\"\n",
+    "index_to_docstore_id_path = \"vector_index_index_to_docstore_id.pkl\"\n",
+    "\n",
+    "if os.path.exists(file_path) and os.path.exists(docstore_path) and os.path.exists(index_to_docstore_id_path):\n",
+    "    # Load the FAISS index from a file\n",
+    "    index = faiss.read_index(file_path)\n",
+    "\n",
+    "    # Load the docstore and index_to_docstore_id\n",
+    "    with open(docstore_path, \"rb\") as f:\n",
+    "        docstore = pickle.load(f)\n",
+    "\n",
+    "    with open(index_to_docstore_id_path, \"rb\") as f:\n",
+    "        index_to_docstore_id = pickle.load(f)\n",
+    "\n",
+    "    # Recreate the embedding function if necessary\n",
+    "    embedding_function = OpenAIEmbeddings()\n",
+    "\n",
+    "    # Recreate the FAISS object with the loaded index and additional data\n",
+    "    vectorIndex = FAISS(\n",
+    "        index=index,\n",
+    "        embedding_function=embedding_function,\n",
+    "        docstore=docstore,\n",
+    "        index_to_docstore_id=index_to_docstore_id\n",
+    "    )\n",
+    "else:\n",
+    "    print(\"FAISS index files do not exist. Please create the index first.\")"
+   ]
   }
  ],
  "metadata": {
